comprehensive refactor of all ConceptoLaboral components